feat: Add head tag

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-    <title>React App</title>
+    <title>팀프레시</title>
+    <meta name="description" content="대한민국 No.1 Cold Chain Platform 콜드체인 플랫폼, 새벽배송대행, 냉장화물차량주선, 풀필먼트대행, 식자재유통" />
+		<meta name="keywords" content="대한민국 No.1 Cold Chain Platform 콜드체인 플랫폼, 새벽배송대행, 냉장화물차량주선, 풀필먼트대행, 식자재유통"  />
+		<meta name="classification" content="대한민국 No.1 Cold Chain Platform 콜드체인 플랫폼, 새벽배송대행, 냉장화물차량주선, 풀필먼트대행, 식자재유통" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="팀프레시" />
+		<meta property="og:description" content="대한민국 No.1 Cold Chain Platform 콜드체인 플랫폼, 새벽배송대행, 냉장화물차량주선, 풀필먼트대행, 식자재유통" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
